--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "spicesafari",
   "version": "0.1.0",
+  "https":"//JustinMaina.github.io/SpiceSafari-Recipe-App",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -16,10 +17,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
